--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <section id="frase-main">
             <div>
                 <div >
-                    <p>Productos ideales para emprendimientos gastronómicos, <br> restaurantes, hoteles o familiar  <br> Realizá tu pedido </p> 
+                    <p>Productos ideales para emprendimientos gastronómicos, <br> restaurantes, hoteles o familia  <br> Realizá tu pedido </p> 
                 </div> 
                     
                 <div class="leer-mas">
