--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -130,10 +130,10 @@
    </div> 
   </div>  
   
-  <div class="d-flex flex-row flex-wrap">
+  <div class="d-flex flex-row flex-wrap mt-2">
     <p class="ms-4 mb-2 flex-grow-1 fw-light"><img class="mx-3" src="../public/img/logo48px.png" alt="logo">Copyright 2021 Germinados de Cuyo.</p> 
-    <a class="ms-4 mb-2 text-decoration-none" href="#">Aviso de privacidad</a>
-    <a class="mx-3 mb-2 text-decoration-none" href="#">Términos y condiciones</a>
+    <a class="mb-2 text-decoration-none mx-auto" href="#">Aviso de privacidad</a>
+      <a class="mb-2 text-decoration-none mx-auto px-3" href="#">Términos y condiciones</a>
   </div> 
 </footer>
 
