--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light p-0">
             <div class="container">
-              <a class="navbar-brand" href="index.html"><img src="public/img/logo85px.png" alt="Logo" width="auto" height="auto"></a>
+              <a class="navbar-brand p-0" href="index.html"><img src="public/img/logo90px.png" alt="Logo" width="auto" height="auto"></a>
               <div class="d-flex flex-column flex-sm-row">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
