--- a/pages/productos.html
+++ b/pages/productos.html
@@ -27,10 +27,10 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light p-0">
             <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../public/img/logo85px.png" alt="logo" width="auto" height="auto"></a>
-              <div class="d-flex flex-column flex-sm-row">
+              <a class="navbar-brand" href="../index.html"><img src="../public/img/logo90px.png" alt="logo" width="auto" height="auto"></a>
+              <div class="d-flex flex-column flex-sm-row p-0">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
