--- a/pages/productos.html
+++ b/pages/productos.html
@@ -184,7 +184,7 @@
   </div>  
   
   <div class="d-flex flex-row flex-wrap mt-2">
-    <p class="mx-4 mb-2 flex-grow-1 fw-light"><img class="mx-1" src="public/img/logo48px.png" alt="logo"> &#169 2021 Germinados de Cuyo. </p>  
+    <p class="mx-4 mb-2 flex-grow-1 fw-light"><img class="mx-1" src="../public/img/logo48px.png" alt="logo"> &#169 2021 Germinados de Cuyo. </p>  
     <a class="mb-2 text-decoration-none mx-auto" href="#">Aviso de privacidad</a>
       <a class="mb-2 text-decoration-none mx-auto px-3" href="#">Términos y condiciones</a>
   </div> 
