--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -82,7 +82,7 @@
             <!-- Texto procedencia de la empresa -->
             <div class="parrafos-historia">
                 <h1>¿Quienes Somos?</h1>
-                <span>Germinados de cuyo es una empresa familiar  ubicada en el departamento de Guaymallén <br> provincia de Mendoza, se crea en el año 2015 por los hnos. .... con el objetivo <br>de producir alimentos  organicos y agroecologicos amigables con el medio ambiente... <br> <br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br> Quibusdam, architecto suscipit. Quis provident delectus cum inventore voluptas aut <br> assumenda illo ipsa hic veritatis numquam tempore nostrum, possimus atque molestias tempora.</span>
+                <span>Germinados de cuyo es una empresa familiar  ubicada en el departamento de Guaymallén <br> provincia de Mendoza, se crea en el año 2015 por la familia Germanos con el objetivo <br>de producir alimentos  organicos y agroecologicos amigables con el medio ambiente y las personas. <br> <br>Sus productos son reconocidos por la inocuidad y calidad que presentan  <br> y son comercilaizados en distintas cadenas de supermercados, ferias y almacenes del territorio Argentino, <br> tambien muy requeridos en el rubro gastronómicos y hoteleros. <br>  . </span>
             </div>
         </section>
      </main>
